--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -14,6 +14,7 @@ jobs:
     - uses: actions/checkout@v2
 
     # Install dependencies
+    - name: Set up Python 3.7
       uses: actions/setup-python@v1
       with:
         python-version: 3.7
